修改映入jar