@@ -1,8 +1,11 @@
 package com.example.springbootencry.util;
 
 import com.alibaba.fastjson.JSON;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+//import sun.misc.BASE64Decoder;
+//import sun.misc.BASE64Encoder;
+import java.util.Base64.Decoder;
+import java.util.Base64.Encoder;
+
 
 import javax.crypto.Cipher;
 import javax.crypto.SecretKey;
@@ -10,6 +13,7 @@ import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.DESKeySpec;
 import java.io.IOException;
 import java.security.SecureRandom;
+import java.util.Base64;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -26,9 +30,9 @@ public class DesUtil {
     private final static String defaultKey = "test12341234";
 
     public static void main(String[] args) throws Exception {
-        Map<String,Object> map = new HashMap<>(2);
-        map.put("name","Java碎碎念");
-        map.put("des","请求参数");
+        Map<String, Object> map = new HashMap<>(2);
+        map.put("name", "Java碎碎念");
+        map.put("des", "请求参数");
         String data = "";
         System.out.println(encrypt(JSON.toJSONString(map)));
 
@@ -39,10 +43,17 @@ public class DesUtil {
      *
      * @return String
      * @date 2015-3-17 下午02:46:43
+     * // BASE64Encoder encoder = new BASE64Encoder();
+     * // String encode = encoder.encode(data);
+     * // 从JKD 9开始rt.jar包已废除，从JDK 1.8开始使用java.util.Base64.Encoder
+     * Encoder encoder = Base64.getEncoder();
+     * String encode = encoder.encodeToString(data);
      */
     public static String encrypt(String data) throws Exception {
         byte[] bt = encrypt(data.getBytes(ENCODE), defaultKey.getBytes(ENCODE));
-        String strs = new BASE64Encoder().encode(bt);
+//        String strs = new BASE64().encode(bt);
+        Encoder encoder = Base64.getEncoder();
+        String strs = encoder.encodeToString(bt);
         return strs;
     }
 
@@ -51,12 +62,17 @@ public class DesUtil {
      *
      * @return String
      * @date 2015-3-17 下午02:49:52
+     * // BASE64Decoder decoder = new BASE64Decoder();
+     * // byte[] buffer = decoder.decodeBuffer(data);
+     * // 从JKD 9开始rt.jar包已废除，从JDK 1.8开始使用java.util.Base64.Decoder
+     * Decoder decoder = Base64.getDecoder();
+     * byte[] buffer = decoder.decode(data);
      */
     public static String decrypt(String data) throws IOException, Exception {
         if (data == null)
             return null;
-        BASE64Decoder decoder = new BASE64Decoder();
-        byte[] buf = decoder.decodeBuffer(data);
+        Decoder decoder = Base64.getDecoder();
+        byte[] buf = decoder.decode(data);
         byte[] bt = decrypt(buf, defaultKey.getBytes(ENCODE));
         return new String(bt, ENCODE);
     }
@@ -71,7 +87,9 @@ public class DesUtil {
      */
     public static String encrypt(String data, String key) throws Exception {
         byte[] bt = encrypt(data.getBytes(ENCODE), defaultKey.getBytes(ENCODE));
-        String strs = new BASE64Encoder().encode(bt);
+//        String strs = new BASE64Encoder().encode(bt);
+        Encoder encoder = Base64.getEncoder();
+        String strs = encoder.encodeToString(bt);
         return strs;
     }
 
@@ -88,8 +106,10 @@ public class DesUtil {
             Exception {
         if (data == null)
             return null;
-        BASE64Decoder decoder = new BASE64Decoder();
-        byte[] buf = decoder.decodeBuffer(data);
+//        BASE64Decoder decoder = new BASE64Decoder();
+//        byte[] buf = decoder.decodeBuffer(data);
+        Decoder decoder = Base64.getDecoder();
+        byte[] buf = decoder.decode(data);
         byte[] bt = decrypt(buf, key.getBytes(ENCODE));
         return new String(bt, ENCODE);
     }
